# 20230325-learn-rust-axum-blog

./: Cargo.toml  README.md  docker-compose.yaml
postgres/init/: 1_create.sql
src/: main.rs
src/assets/: post.css
templates/: base.html  index.html  posts.html
